feat(#101) Add translation to inspection general page

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -7,6 +7,32 @@
   "inspectionBatch":"Inspection batch",
   "riskLevel": "Risk level",
   "inspectionListSearchText":"Risk level, civic # or street name",
+  "generalInformation":"General information",
+  "Buildings":"Buildings",
+  "waterSupplies":"Water supplies",
+  "implantationPlan":"Site plan",
+  "course":"Course",
+  "inspectionQuit":"Quit inspection",
+  "survey":"Survey",
+  "risk":"Risk",
+  "affectation":"Assignment",
+  "matricule":"Matricule",
+  "street":"Street",
+  "transversal":"Transversal",
+  "start": "Start",
+  "visitRefused": "Visit refused",
+  "absence":"Absence",
+  "reason":"Reason",
+  "complete":"Complete",
+  "inspectionStatusTodo":"Pending inspection",
+  "inspectionStatusStarted":"Inspection in progress",
+  "inspectionStatusWaitingForApprobation":"Waiting for inspection approval",
+  "inspectionStatusApproved":"Inspection approuved",
+  "inspectionStatusRefused":"Inspection refused",
+  "inspectionStatusCanceled":"Inspection canceled",
+  "visitStatusTodo":"Pending visit",
+  "visitStarted":"Visit in progress",
+  "visitCompleted":"Visit completed",
   "compilerOptions": {
     "module": "commonjs",
     "target": "es5",
