feat(#101) Add translation for fire hydrant and building list

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,38 +1,43 @@
 {
-  "userName":"User name",
-  "password":"Password",
+  "absence":"Absence",
+  "add":"Add",
+  "affectation":"Assignment",
+  "buildingList":"Building list",
+  "buildings":"Buildings",
+  "complete":"Complete",
+  "course":"Course",
+  "fireHydrantList":"Fire hydrant list",
+  "fireHydrants":"Fire hydrants",
+  "generalInformation":"General information",
+  "implantationPlan":"Site plan",
+  "inspectionBatch":"Inspection batch",
+  "inspectionList":"Inspection list",
+  "inspectionListSearchText":"Risk level, civic # or street name",
+  "inspectionQuit":"Quit inspection",
+  "inspectionStatusApproved":"Inspection approuved",
+  "inspectionStatusCanceled":"Inspection canceled",
+  "inspectionStatusRefused":"Inspection refused",
+  "inspectionStatusStarted":"Inspection in progress",
+  "inspectionStatusTodo":"Pending inspection",
+  "inspectionStatusWaitingForApprobation":"Waiting for inspection approval",
   "login":"LOG IN",
   "logout":"Log out",
-  "inspectionList":"Inspection list",
-  "inspectionBatch":"Inspection batch",
-  "riskLevel": "Risk level",
-  "inspectionListSearchText":"Risk level, civic # or street name",
-  "generalInformation":"General information",
-  "Buildings":"Buildings",
-  "waterSupplies":"Water supplies",
-  "implantationPlan":"Site plan",
-  "course":"Course",
-  "inspectionQuit":"Quit inspection",
-  "survey":"Survey",
-  "risk":"Risk",
-  "affectation":"Assignment",
   "matricule":"Matricule",
-  "street":"Street",
-  "transversal":"Transversal",
-  "start": "Start",
-  "visitRefused": "Visit refused",
-  "absence":"Absence",
+  "password":"Password",
   "reason":"Reason",
-  "complete":"Complete",
-  "inspectionStatusTodo":"Pending inspection",
-  "inspectionStatusStarted":"Inspection in progress",
-  "inspectionStatusWaitingForApprobation":"Waiting for inspection approval",
-  "inspectionStatusApproved":"Inspection approuved",
-  "inspectionStatusRefused":"Inspection refused",
-  "inspectionStatusCanceled":"Inspection canceled",
+  "risk":"Risk",
+  "riskLevel": "Risk level",
+  "start": "Start",
+  "street":"Street",
+  "survey":"Survey",
+  "transversal":"Transversal",
+  "userName":"User name",
+  "visitRefused": "Visit refused",
+  "visitStatusCompleted":"Visit completed",
+  "visitStatusStarted":"Visit in progress",
   "visitStatusTodo":"Pending visit",
-  "visitStarted":"Visit in progress",
-  "visitCompleted":"Visit completed",
+  "waterSupplies":"Water supplies",
+
   "compilerOptions": {
     "module": "commonjs",
     "target": "es5",
