--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1,38 +1,43 @@
 {
+  "absence":"Absence",
+  "add":"Ajouter",
+  "affectation":"Affectation",
+  "buildingList":"Liste des batîments",
+  "buildings":"Batîments",
+  "complete":"Compléter",
+  "course":"Parcours",
+  "fireHydrantList":"Liste des bornes incendie",
+  "fireHydrants":"Bornes incendie",
+  "generalInformation":"Infos générales",
+  "implantationPlan":"Plan d'implantation",
   "userName":"Nom d'usager",
-  "password":"Mot de passe",
   "login":"CONNEXION",
   "logout":"Quitter",
   "inspectionList":"Liste des inspections",
   "inspectionBatch":"lot d'inspection",
   "riskLevel": "Niveau de risque",
   "inspectionListSearchText":"Niveau de risque, # civique ou nom de rue",
-  "generalInformation":"Infos générales",
-  "Buildings":"Batîments",
-  "waterSupplies":"Alimentation en eau",
-  "implantationPlan":"Plan d'implantation",
-  "course":"Parcours",
-  "inspectionQuit":"Sortir de l'inspection",
-  "survey":"Questionnaire",
-  "Risk":"Risque",
-  "affectation":"Affectation",
-  "matricule":"Matricule",
-  "street":"Rue",
-  "transversal":"Transversale",
-  "start": "Démarrer",
-  "visitRefused": "Refus de visite",
-  "absence":"Absence",
-  "reason":"Raison",
-  "complete":"Compléter",
-  "inspectionStatusTodo":"Inspection en attente",
-  "inspectionStatusStarted":"Inspection en cours",
-  "inspectionStatusWaitingForApprobation":"Inspection en attente d'approbation",
   "inspectionStatusApproved":"Inspection approuvée",
-  "inspectionStatusRefused":"Inspection refusée",
   "inspectionStatusCanceled":"Inspection annulée",
+  "inspectionStatusRefused":"Inspection refusée",
+  "inspectionStatusStarted":"Inspection en cours",
+  "inspectionStatusTodo":"Inspection en attente",
+  "inspectionStatusWaitingForApprobation":"Inspection en attente d'approbation",
+  "inspectionQuit":"Sortir de l'inspection",
+  "password":"Mot de passe",
+  "matricule":"Matricule",
+  "reason":"Raison",
+  "Risk":"Risque",
+  "start": "Démarrer",
+  "street":"Rue",
+  "survey":"Questionnaire",
+  "transversal":"Transversale",
+  "visitRefused": "Refus de visite",
   "visitStatusTodo":"Visite en attente",
-  "visitStarted":"Visite en cours",
-  "visitCompleted":"Visit completée",
+  "visitStatusStarted":"Visite en cours",
+  "visitStatusCompleted":"Visit completée",
+  "waterSupplies":"Alimentation en eau",
+
 
   "compilerOptions": {
     "module": "commonjs",
