feat(#101) Add translation in course, course-detail page

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -4,10 +4,19 @@
   "affectation":"Assignment",
   "buildingList":"Building list",
   "buildings":"Buildings",
+  "choose":"Choose",
+  "chooseFireStation":"Choose a fire station",
   "complete":"Complete",
   "course":"Course",
+  "courseDetail":"Course detail",
+  "courseOrderChange":"Change order",
+  "finish":"Finish",
+  "fireHydrantDelete":"Delete fire hydrant",
+  "fireHydrantDeleteQuestion":"Do you want to delete the target fire hydrant ?",
   "fireHydrantList":"Fire hydrant list",
   "fireHydrants":"Fire hydrants",
+  "fireStation":"Fire station",
+  "fireStationRequired":"Fire station is mandatory",
   "generalInformation":"General information",
   "implantationPlan":"Site plan",
   "inspectionBatch":"Inspection batch",
@@ -23,6 +32,8 @@
   "login":"LOG IN",
   "logout":"Log out",
   "matricule":"Matricule",
+  "New":"New",
+  "No":"No",
   "password":"Password",
   "reason":"Reason",
   "risk":"Risk",
@@ -37,6 +48,7 @@
   "visitStatusStarted":"Visit in progress",
   "visitStatusTodo":"Pending visit",
   "waterSupplies":"Water supplies",
+  "yes":"Yes",
 
   "compilerOptions": {
     "module": "commonjs",
