--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -4,40 +4,51 @@
   "affectation":"Affectation",
   "buildingList":"Liste des batîments",
   "buildings":"Batîments",
+  "choose":"Choisir",
+  "chooseFireStation":"Choose a fire station",
   "complete":"Compléter",
   "course":"Parcours",
+  "courseOrderChange":"Changer l'ordre",
+  "courseDetail":"Détail du parcours",
+  "finish":"Terminer",
+  "fireHydrantDelete":"Suppression de borne",
+  "fireHydrantDeleteQuestion":"Voulez-vous supprimer la borne ciblée ?",
   "fireHydrantList":"Liste des bornes incendie",
   "fireHydrants":"Bornes incendie",
+  "fireStation":"Caserne",
+  "fireStationRequired":"La caserne est obligatoire",
   "generalInformation":"Infos générales",
   "implantationPlan":"Plan d'implantation",
-  "userName":"Nom d'usager",
-  "login":"CONNEXION",
-  "logout":"Quitter",
   "inspectionList":"Liste des inspections",
   "inspectionBatch":"lot d'inspection",
-  "riskLevel": "Niveau de risque",
   "inspectionListSearchText":"Niveau de risque, # civique ou nom de rue",
+  "inspectionQuit":"Sortir de l'inspection",
   "inspectionStatusApproved":"Inspection approuvée",
   "inspectionStatusCanceled":"Inspection annulée",
   "inspectionStatusRefused":"Inspection refusée",
   "inspectionStatusStarted":"Inspection en cours",
   "inspectionStatusTodo":"Inspection en attente",
   "inspectionStatusWaitingForApprobation":"Inspection en attente d'approbation",
-  "inspectionQuit":"Sortir de l'inspection",
-  "password":"Mot de passe",
+  "login":"CONNEXION",
+  "logout":"Quitter",
   "matricule":"Matricule",
+  "New":"Nouvelle",
+  "No":"No",
+  "password":"Mot de passe",
   "reason":"Raison",
   "Risk":"Risque",
+  "riskLevel": "Niveau de risque",
   "start": "Démarrer",
   "street":"Rue",
   "survey":"Questionnaire",
   "transversal":"Transversale",
+  "userName":"Nom d'usager",
   "visitRefused": "Refus de visite",
   "visitStatusTodo":"Visite en attente",
   "visitStatusStarted":"Visite en cours",
   "visitStatusCompleted":"Visit completée",
   "waterSupplies":"Alimentation en eau",
-
+  "yes":"Oui",
 
   "compilerOptions": {
     "module": "commonjs",
