feat(#101) : Add translation for course detail

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,15 +1,24 @@
 {
   "absence":"Absence",
   "add":"Add",
+  "addLaneButton":"Add a lane...",
   "affectation":"Assignment",
   "buildingList":"Building list",
   "buildings":"Buildings",
+  "cancel":"Cancel",
   "choose":"Choose",
   "chooseFireStation":"Choose a fire station",
   "complete":"Complete",
+  "confirmation":"Confirmation",
   "course":"Course",
   "courseDetail":"Course detail",
+  "courseDetailDeleteButton":"Delete the course",
+  "courseDetailDeleteQuestion":"Do you really want to delete this course ?",
+  "courseDetailLeaveMessage":"this course contains some validation errors and have not been saved. Do you still want to to previous page ?",
+  "courseLaneDetail":"Lane detail",
+  "courseLaneValidationMessage":"You must select a fire station before choosing a street.",
   "courseOrderChange":"Change order",
+  "direction":"Direction",
   "finish":"Finish",
   "fireHydrantDelete":"Delete fire hydrant",
   "fireHydrantDeleteQuestion":"Do you want to delete the target fire hydrant ?",
@@ -29,11 +38,16 @@
   "inspectionStatusStarted":"Inspection in progress",
   "inspectionStatusTodo":"Pending inspection",
   "inspectionStatusWaitingForApprobation":"Waiting for inspection approval",
+  "lane":"Lane",
+  "laneDeleteButton":"Delete the lane",
+  "laneDeleteQuestion":"Do you really want to delete this lane ?",
+  "laneLeaveMessage":"This lane contains some validation errors and have not been saved. Do you still want to to previous page ?",
+  "laneRequired":"*The lane is required.",
   "login":"LOG IN",
   "logout":"Log out",
   "matricule":"Matricule",
-  "New":"New",
-  "No":"No",
+  "new":"New",
+  "no":"No",
   "password":"Password",
   "reason":"Reason",
   "risk":"Risk",
@@ -41,12 +55,15 @@
   "start": "Start",
   "street":"Street",
   "survey":"Survey",
+  "surveyRequired":"Please answer the survey to complete inpsection.",
   "transversal":"Transversal",
   "userName":"User name",
   "visitRefused": "Visit refused",
   "visitStatusCompleted":"Visit completed",
   "visitStatusStarted":"Visit in progress",
   "visitStatusTodo":"Pending visit",
+  "waitFormMessage":"Wait...",
+  "warning":"Warning",
   "waterSupplies":"Water supplies",
   "yes":"Yes",
 
