--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1,15 +1,24 @@
 {
   "absence":"Absence",
   "add":"Ajouter",
+  "addLaneButton":"Ajouter une voie...",
   "affectation":"Affectation",
   "buildingList":"Liste des batîments",
   "buildings":"Batîments",
+  "cancel":"Annuler",
   "choose":"Choisir",
   "chooseFireStation":"Choose a fire station",
   "complete":"Compléter",
+  "Confirmation":"Confirmation",
   "course":"Parcours",
-  "courseOrderChange":"Changer l'ordre",
   "courseDetail":"Détail du parcours",
+  "courseDetailDeleteButton":"Supprimer le parcours",
+  "courseDetailDeleteQuestion":"Êtes-vous sûre de vouloir supprimer ce parcours ?",
+  "courseDetailLeaveMessage":"Le parcours contient des erreurs de validation et n'a pas été sauvegardé.  Voulez-vous quand même retourner à la page précédente?",
+  "courseLaneDetail":"Détails de la voie",
+  "courseLaneValidationMessage":"Vous devez sélectionner une caserne avant de pouvoir ajouter une rue.",
+  "courseOrderChange":"Changer l'ordre",
+  "direction":"Direction",
   "finish":"Terminer",
   "fireHydrantDelete":"Suppression de borne",
   "fireHydrantDeleteQuestion":"Voulez-vous supprimer la borne ciblée ?",
@@ -29,11 +38,16 @@
   "inspectionStatusStarted":"Inspection en cours",
   "inspectionStatusTodo":"Inspection en attente",
   "inspectionStatusWaitingForApprobation":"Inspection en attente d'approbation",
+  "lane":"Voie",
+  "laneDeleteButton":"Supprimer la voie",
+  "laneDeleteQuestion":"Êtes-vous sûre de vouloir supprimer cette voie ?",
+  "laneLeaveMessage":"La voie contient des erreurs de validation et n'a pas été sauvegardée.  Voulez-vous quand même retourner à la page précédente?",
+  "laneRequired":"*La voie est requise.",
   "login":"CONNEXION",
   "logout":"Quitter",
   "matricule":"Matricule",
   "New":"Nouvelle",
-  "No":"No",
+  "No":"Non",
   "password":"Mot de passe",
   "reason":"Raison",
   "Risk":"Risque",
@@ -41,12 +55,15 @@
   "start": "Démarrer",
   "street":"Rue",
   "survey":"Questionnaire",
+  "surveyRequired":"Please answer the survey to complete inpsection.",
   "transversal":"Transversale",
   "userName":"Nom d'usager",
   "visitRefused": "Refus de visite",
   "visitStatusTodo":"Visite en attente",
   "visitStatusStarted":"Visite en cours",
   "visitStatusCompleted":"Visit completée",
+  "waitFormMessage":"Patientez...",
+  "warning":"Avertissement",
   "waterSupplies":"Alimentation en eau",
   "yes":"Oui",
 
