feat(#101) Add translation for building detail

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -3,6 +3,9 @@
   "add":"Add",
   "addLaneButton":"Add a lane...",
   "affectation":"Assignment",
+  "building":"Building",
+  "buildingDetail":"Building details",
+  "buildingLeaveMessage":"The building details contains some validation errors and have not been saved. Do you still want to go to previous page ?",
   "buildingList":"Building list",
   "buildings":"Buildings",
   "cancel":"Cancel",
@@ -10,6 +13,7 @@
   "chooseFireStation":"Choose a fire station",
   "complete":"Complete",
   "confirmation":"Confirmation",
+  "construction":"Construction",
   "course":"Course",
   "courseDetail":"Course detail",
   "courseDetailDeleteButton":"Delete the course",
@@ -18,15 +22,21 @@
   "courseLaneDetail":"Lane detail",
   "courseLaneValidationMessage":"You must select a fire station before choosing a street.",
   "courseOrderChange":"Change order",
+  "detached":"Detached",
+  "dieValidationMessage":"*DIE must be an integer equal or superior to 0.",
   "direction":"Direction",
   "finish":"Finish",
   "fireHydrantDelete":"Delete fire hydrant",
   "fireHydrantDeleteQuestion":"Do you want to delete the target fire hydrant ?",
   "fireHydrantList":"Fire hydrant list",
   "fireHydrants":"Fire hydrants",
+  "fireResistance":"Fire resistance",
   "fireStation":"Fire station",
   "fireStationRequired":"Fire station is mandatory",
+  "garage":"Garage",
   "generalInformation":"General information",
+  "height":"Height",
+  "heightValidationMessage":"*Height must be a valid decimal (ex.:999.99)",
   "implantationPlan":"Site plan",
   "inspectionBatch":"Inspection batch",
   "inspectionList":"Inspection list",
@@ -41,22 +51,27 @@
   "lane":"Lane",
   "laneDeleteButton":"Delete the lane",
   "laneDeleteQuestion":"Do you really want to delete this lane ?",
-  "laneLeaveMessage":"This lane contains some validation errors and have not been saved. Do you still want to to previous page ?",
+  "laneLeaveMessage":"This lane contains some validation errors and have not been saved. Do you still want to go to the previous page ?",
   "laneRequired":"*The lane is required.",
   "login":"LOG IN",
-  "logout":"Log out",
+  "logout":"LOG OUT",
+  "material":"Material",
   "matricule":"Matricule",
+  "measuringUnitRequired":"*The measuring unit is required.",
   "new":"New",
   "no":"No",
   "password":"Password",
   "reason":"Reason",
   "risk":"Risk",
   "riskLevel": "Risk level",
+  "roof":"Roof",
+  "siding":"Siding",
   "start": "Start",
   "street":"Street",
   "survey":"Survey",
   "surveyRequired":"Please answer the survey to complete inpsection.",
   "transversal":"Transversal",
+  "unit":"Unit",
   "userName":"User name",
   "visitRefused": "Visit refused",
   "visitStatusCompleted":"Visit completed",
