--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -3,6 +3,9 @@
   "add":"Ajouter",
   "addLaneButton":"Ajouter une voie...",
   "affectation":"Affectation",
+  "building":"Batîment",
+  "buildingDetail":"Building details",
+  "buildingLeaveMessage":"Le détail du batîments contient des erreurs de validation et n'a pas été sauvegardé. Voulez-vous quand même retourner à la page précédente?",
   "buildingList":"Liste des batîments",
   "buildings":"Batîments",
   "cancel":"Annuler",
@@ -10,6 +13,7 @@
   "chooseFireStation":"Choose a fire station",
   "complete":"Compléter",
   "Confirmation":"Confirmation",
+  "construction":"Construction",
   "course":"Parcours",
   "courseDetail":"Détail du parcours",
   "courseDetailDeleteButton":"Supprimer le parcours",
@@ -18,15 +22,21 @@
   "courseLaneDetail":"Détails de la voie",
   "courseLaneValidationMessage":"Vous devez sélectionner une caserne avant de pouvoir ajouter une rue.",
   "courseOrderChange":"Changer l'ordre",
+  "detached":"Détaché",
+  "dieValidationMessage":"*Le DIE doit être une valeur entière et valide supérieure ou égale à 0.",
   "direction":"Direction",
   "finish":"Terminer",
   "fireHydrantDelete":"Suppression de borne",
   "fireHydrantDeleteQuestion":"Voulez-vous supprimer la borne ciblée ?",
   "fireHydrantList":"Liste des bornes incendie",
   "fireHydrants":"Bornes incendie",
+  "fireResistance":"Résistance au feu",
   "fireStation":"Caserne",
   "fireStationRequired":"La caserne est obligatoire",
+  "garage":"Garage",
   "generalInformation":"Infos générales",
+  "height":"Hauteur",
+  "heightValidationMessage":"*La hauteur doit être une valeur décimale de format valide (ex.: 9999.99).",
   "implantationPlan":"Plan d'implantation",
   "inspectionList":"Liste des inspections",
   "inspectionBatch":"lot d'inspection",
@@ -45,18 +55,24 @@
   "laneRequired":"*La voie est requise.",
   "login":"CONNEXION",
   "logout":"Quitter",
+  "material":"Matériel",
   "matricule":"Matricule",
+  "measuringUnitRequired":"*L'unité de mesure est requise.",
   "New":"Nouvelle",
   "No":"Non",
   "password":"Mot de passe",
   "reason":"Raison",
   "Risk":"Risque",
   "riskLevel": "Niveau de risque",
+  "roof":"Toit",
+  "siding":"Revêtement",
   "start": "Démarrer",
   "street":"Rue",
   "survey":"Questionnaire",
   "surveyRequired":"Please answer the survey to complete inpsection.",
   "transversal":"Transversale",
+  "type":"Type",
+  "unit":"Unité",
   "userName":"Nom d'usager",
   "visitRefused": "Refus de visite",
   "visitStatusTodo":"Visite en attente",
