feat(#101) Add translation for building contact

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,19 +1,27 @@
 {
   "absence":"Absence",
   "add":"Add",
+  "addContactButton":"Add a contact...",
   "addLaneButton":"Add a lane...",
   "affectation":"Assignment",
   "building":"Building",
+  "buildingContact": "Building contacts",
   "buildingDetail":"Building details",
   "buildingLeaveMessage":"The building details contains some validation errors and have not been saved. Do you still want to go to previous page ?",
   "buildingList":"Building list",
   "buildings":"Buildings",
   "cancel":"Cancel",
+  "cellular":"Cellular",
   "choose":"Choose",
   "chooseFireStation":"Choose a fire station",
+  "code":"Code",
   "complete":"Complete",
   "confirmation":"Confirmation",
   "construction":"Construction",
+  "contactDeleteButton": "Delete this contact",
+  "contactDeleteQuestion":"Do you really want to delete this contact ?",
+  "contactDetail":"Contact details",
+  "contactLeaveMessage":"The contact contains some validation errors and have not been saved. Do you still want to go to the building contact list ?",
   "course":"Course",
   "courseDetail":"Course detail",
   "courseDetailDeleteButton":"Delete the course",
@@ -25,18 +33,22 @@
   "detached":"Detached",
   "dieValidationMessage":"*DIE must be an integer equal or superior to 0.",
   "direction":"Direction",
+  "extension":"Extension",
   "finish":"Finish",
   "fireHydrantDelete":"Delete fire hydrant",
-  "fireHydrantDeleteQuestion":"Do you want to delete the target fire hydrant ?",
+  "fireHydrantDeleteQuestion":"Do you really want to delete this fire hydrant ?",
   "fireHydrantList":"Fire hydrant list",
   "fireHydrants":"Fire hydrants",
   "fireResistance":"Fire resistance",
   "fireStation":"Fire station",
   "fireStationRequired":"Fire station is mandatory",
+  "firstName":"First name",
+  "firstNameRequired":"*First name is required.",
   "garage":"Garage",
   "generalInformation":"General information",
   "height":"Height",
   "heightValidationMessage":"*Height must be a valid decimal (ex.:999.99)",
+  "homePhone":"Home phone",
   "implantationPlan":"Site plan",
   "inspectionBatch":"Inspection batch",
   "inspectionList":"Inspection list",
@@ -53,6 +65,8 @@
   "laneDeleteQuestion":"Do you really want to delete this lane ?",
   "laneLeaveMessage":"This lane contains some validation errors and have not been saved. Do you still want to go to the previous page ?",
   "laneRequired":"*The lane is required.",
+  "lastName":"Last name",
+  "lastNameRequired":"*Last name is required.",
   "login":"LOG IN",
   "logout":"LOG OUT",
   "material":"Material",
@@ -60,7 +74,13 @@
   "measuringUnitRequired":"*The measuring unit is required.",
   "new":"New",
   "no":"No",
+  "number":"Number",
+  "otherPhone":"Other phone",
+  "owner":"Owner",
+  "pager":"Pager",
   "password":"Password",
+  "priority":"Priority",
+  "priorityValidationMessage":"*You must enter a valid number.",
   "reason":"Reason",
   "risk":"Risk",
   "riskLevel": "Risk level",
