--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1,19 +1,27 @@
 {
   "absence":"Absence",
   "add":"Ajouter",
+  "addContactButton":"Ajouter un contact...",
   "addLaneButton":"Ajouter une voie...",
   "affectation":"Affectation",
   "building":"Batîment",
+  "buildingContact": "Contacts du batîment",
   "buildingDetail":"Building details",
   "buildingLeaveMessage":"Le détail du batîments contient des erreurs de validation et n'a pas été sauvegardé. Voulez-vous quand même retourner à la page précédente?",
   "buildingList":"Liste des batîments",
   "buildings":"Batîments",
   "cancel":"Annuler",
+  "cellular":"Cellulaire",
   "choose":"Choisir",
   "chooseFireStation":"Choose a fire station",
+  "code":"Code",
   "complete":"Compléter",
   "Confirmation":"Confirmation",
   "construction":"Construction",
+  "contactDetail":"Détails du contact",
+  "contactDeleteButton": "Supprimer le contact",
+  "contactDeleteQuestion":"Êtes-vous sûre de vouloir supprimer ce contact ?",
+  "contactLeaveMessage":"Le contact contient des erreurs de validation et n'a pas été sauvegardé.  Voulez-vous quand même retourner à la page des contacts du bâtiment?",
   "course":"Parcours",
   "courseDetail":"Détail du parcours",
   "courseDetailDeleteButton":"Supprimer le parcours",
@@ -25,18 +33,22 @@
   "detached":"Détaché",
   "dieValidationMessage":"*Le DIE doit être une valeur entière et valide supérieure ou égale à 0.",
   "direction":"Direction",
+  "extension":"Extension",
   "finish":"Terminer",
   "fireHydrantDelete":"Suppression de borne",
-  "fireHydrantDeleteQuestion":"Voulez-vous supprimer la borne ciblée ?",
+  "fireHydrantDeleteQuestion":"Êtes-vous sûre de vouloir supprimer cette borne ? ?",
   "fireHydrantList":"Liste des bornes incendie",
   "fireHydrants":"Bornes incendie",
   "fireResistance":"Résistance au feu",
   "fireStation":"Caserne",
   "fireStationRequired":"La caserne est obligatoire",
+  "firstName":"Prénom",
+  "firstNameRequired":"*Le prénom est requis.",
   "garage":"Garage",
   "generalInformation":"Infos générales",
   "height":"Hauteur",
   "heightValidationMessage":"*La hauteur doit être une valeur décimale de format valide (ex.: 9999.99).",
+  "homePhone":"Téléphone domicile",
   "implantationPlan":"Plan d'implantation",
   "inspectionList":"Liste des inspections",
   "inspectionBatch":"lot d'inspection",
@@ -53,14 +65,22 @@
   "laneDeleteQuestion":"Êtes-vous sûre de vouloir supprimer cette voie ?",
   "laneLeaveMessage":"La voie contient des erreurs de validation et n'a pas été sauvegardée.  Voulez-vous quand même retourner à la page précédente?",
   "laneRequired":"*La voie est requise.",
+  "lastName":"Nom",
+  "lastNameRequired":"Le nom est requis.",
   "login":"CONNEXION",
   "logout":"Quitter",
   "material":"Matériel",
   "matricule":"Matricule",
   "measuringUnitRequired":"*L'unité de mesure est requise.",
-  "New":"Nouvelle",
-  "No":"Non",
+  "new":"Nouvelle",
+  "no":"Non",
+  "number":"Numéro",
+  "otherPhone":"Autre téléphone",
+  "owner":"Propriétaire",
+  "pager":"Téléavertisseur",
   "password":"Mot de passe",
+  "priority":"Priorité",
+  "priorityValidationMessage":"*Vous devez entrer un nombre valide.",
   "reason":"Raison",
   "Risk":"Risque",
   "riskLevel": "Niveau de risque",
