feat(#101) Add translation to PNAP

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2,13 +2,18 @@
   "absence":"Absence",
   "add":"Add",
   "addContactButton":"Add a contact...",
+  "addHazardousMaterialButton":"Add hazardous material...",
   "addLaneButton":"Add a lane...",
+  "addPnapButton":"Add a PNAP...",
   "affectation":"Assignment",
+  "approximate":"Approximate",
   "building":"Building",
   "buildingContact": "Building contacts",
   "buildingDetail":"Building details",
+  "buildingHazardousMaterial":"Building hazardous material",
   "buildingLeaveMessage":"The building details contains some validation errors and have not been saved. Do you still want to go to previous page ?",
   "buildingList":"Building list",
+  "buildingPnaps":"Building PNAPS",
   "buildings":"Buildings",
   "cancel":"Cancel",
   "cellular":"Cellular",
@@ -18,6 +23,7 @@
   "complete":"Complete",
   "confirmation":"Confirmation",
   "construction":"Construction",
+  "contact":"Contact",
   "contactDeleteButton": "Delete this contact",
   "contactDeleteQuestion":"Do you really want to delete this contact ?",
   "contactDetail":"Contact details",
@@ -30,6 +36,7 @@
   "courseLaneDetail":"Lane detail",
   "courseLaneValidationMessage":"You must select a fire station before choosing a street.",
   "courseOrderChange":"Change order",
+  "description":"Description",
   "detached":"Detached",
   "dieValidationMessage":"*DIE must be an integer equal or superior to 0.",
   "direction":"Direction",
@@ -44,6 +51,7 @@
   "fireStationRequired":"Fire station is mandatory",
   "firstName":"First name",
   "firstNameRequired":"*First name is required.",
+  "floor":"Floor",
   "garage":"Garage",
   "generalInformation":"General information",
   "height":"Height",
@@ -79,18 +87,33 @@
   "owner":"Owner",
   "pager":"Pager",
   "password":"Password",
+  "phone":"Phone",
+  "pnapDayResident":"Day resident",
+  "pnapDeleteButton":"Delete this PNAP",
+  "pnapDeleteQuestion":"Do you really want to delete this PNAP ?",
+  "pnapDetail":"PNAP details",
+  "pnapDetailContactNameHolder":"Name of the contact",
+  "pnapDetailNameHolder":"Name of the person",
+  "pnapEveningResident":"Evening resident",
+  "pnapLeaveMessage":"The PNAP contains some validation errors and have not been saved. Do you still want to go to the building PNAP list ?",
+  "pnapNightResident":"Night resident",
+  "pnapNumber":"Number",
+  "pnapNumberValidationMessage":"*The number must be a valid integer.",
   "priority":"Priority",
   "priorityValidationMessage":"*You must enter a valid number.",
   "reason":"Reason",
   "risk":"Risk",
   "riskLevel": "Risk level",
   "roof":"Roof",
+  "room":"Room",
   "siding":"Siding",
   "start": "Start",
   "street":"Street",
   "survey":"Survey",
   "surveyRequired":"Please answer the survey to complete inpsection.",
   "transversal":"Transversal",
+  "type":"Type",
+  "typeRequired":"*Type is required.",
   "unit":"Unit",
   "userName":"User name",
   "visitRefused": "Visit refused",
