--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -2,13 +2,18 @@
   "absence":"Absence",
   "add":"Ajouter",
   "addContactButton":"Ajouter un contact...",
+  "addHazardousMaterialButton":"Ajouter une matière dangereuse...",
   "addLaneButton":"Ajouter une voie...",
+  "addPnapButton":"Ajouter un PNAP...",
   "affectation":"Affectation",
+  "approximate":"Approximatif",
   "building":"Batîment",
   "buildingContact": "Contacts du batîment",
-  "buildingDetail":"Building details",
+  "buildingDetail":"Détails du batîmnet",
+  "buildingHazardousMaterial":"Matières dangereuses du batîmnent",
   "buildingLeaveMessage":"Le détail du batîments contient des erreurs de validation et n'a pas été sauvegardé. Voulez-vous quand même retourner à la page précédente?",
   "buildingList":"Liste des batîments",
+  "buildingPNAPS":"PNAPS du batîment",
   "buildings":"Batîments",
   "cancel":"Annuler",
   "cellular":"Cellulaire",
@@ -18,6 +23,7 @@
   "complete":"Compléter",
   "Confirmation":"Confirmation",
   "construction":"Construction",
+  "contact":"Contact",
   "contactDetail":"Détails du contact",
   "contactDeleteButton": "Supprimer le contact",
   "contactDeleteQuestion":"Êtes-vous sûre de vouloir supprimer ce contact ?",
@@ -30,6 +36,7 @@
   "courseLaneDetail":"Détails de la voie",
   "courseLaneValidationMessage":"Vous devez sélectionner une caserne avant de pouvoir ajouter une rue.",
   "courseOrderChange":"Changer l'ordre",
+  "description":"Description",
   "detached":"Détaché",
   "dieValidationMessage":"*Le DIE doit être une valeur entière et valide supérieure ou égale à 0.",
   "direction":"Direction",
@@ -44,6 +51,7 @@
   "fireStationRequired":"La caserne est obligatoire",
   "firstName":"Prénom",
   "firstNameRequired":"*Le prénom est requis.",
+  "floor":"Étage",
   "garage":"Garage",
   "generalInformation":"Infos générales",
   "height":"Hauteur",
@@ -79,12 +87,25 @@
   "owner":"Propriétaire",
   "pager":"Téléavertisseur",
   "password":"Mot de passe",
+  "phone":"Téléphone",
+  "pnapDayResident":"Résident de jour",
+  "pnapDeleteButton":"Supprimer le PNAP",
+  "pnapDeleteQuestion":"Êtes-vous certain de vouloir supprimer ce PNAP ?",
+  "pnapDetail":"Détails du PNAP",
+  "pnapDetailContactNameHolder":"Nom du contact",
+  "pnapDetailNameHolder":"Nom de la personne",
+  "pnapEveningResident":"Résident de soir",
+  "pnapLeaveMessage":"Le PNAP contient des erreurs de validation et n'a pas été sauvegardée.  Voulez-vous quand même retourner à la liste des PNAPS du batîment?",
+  "pnapNightResident":"Résident de nuit",
+  "pnapNumber":"Nombre",
+  "pnapNumberValidationMessage":"*Le nombre doit être une valeur entière valide.",
   "priority":"Priorité",
   "priorityValidationMessage":"*Vous devez entrer un nombre valide.",
   "reason":"Raison",
-  "Risk":"Risque",
+  "risk":"Risque",
   "riskLevel": "Niveau de risque",
   "roof":"Toit",
+  "room":"Local",
   "siding":"Revêtement",
   "start": "Démarrer",
   "street":"Rue",
@@ -92,6 +113,7 @@
   "surveyRequired":"Please answer the survey to complete inpsection.",
   "transversal":"Transversale",
   "type":"Type",
+  "typeRequired":"*Le type est requis.",
   "unit":"Unité",
   "userName":"Nom d'usager",
   "visitRefused": "Refus de visite",
