feat(#101) Add translation for hazardous material

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -16,6 +16,7 @@
   "buildingPnaps":"Building PNAPS",
   "buildings":"Buildings",
   "cancel":"Cancel",
+  "capacity":"Capacity",
   "cellular":"Cellular",
   "choose":"Choose",
   "chooseFireStation":"Choose a fire station",
@@ -28,6 +29,10 @@
   "contactDeleteQuestion":"Do you really want to delete this contact ?",
   "contactDetail":"Contact details",
   "contactLeaveMessage":"The contact contains some validation errors and have not been saved. Do you still want to go to the building contact list ?",
+  "container":"Container",
+  "containerCapacity":"Container capacity",
+  "containerCapacityValidationMessage":"*Capacity must be a valid decimal.",
+  "containerUnitRequired":"*Measuring unit is required when capacity is superior than 0.",
   "course":"Course",
   "courseDetail":"Course detail",
   "courseDetailDeleteButton":"Delete the course",
@@ -40,6 +45,7 @@
   "detached":"Detached",
   "dieValidationMessage":"*DIE must be an integer equal or superior to 0.",
   "direction":"Direction",
+  "division":"Division",
   "extension":"Extension",
   "finish":"Finish",
   "fireHydrantDelete":"Delete fire hydrant",
@@ -53,7 +59,12 @@
   "firstNameRequired":"*First name is required.",
   "floor":"Floor",
   "garage":"Garage",
+  "gasInlet":"Gaz inlet",
   "generalInformation":"General information",
+  "hazardousMaterialDelete":"Delete this hazardous material...",
+  "hazardousMaterialDeleteQuestion":"Do you really want to delete this material ?",
+  "hazardousMaterialDetail":"Hazardous material details",
+  "hazardousMaterialLeaveMessage":"The hazardous material contains some validation errors and have not been saved. Do you still want to go to the building hazardous material list ?",
   "height":"Height",
   "heightValidationMessage":"*Height must be a valid decimal (ex.:999.99)",
   "homePhone":"Home phone",
@@ -75,6 +86,7 @@
   "laneRequired":"*The lane is required.",
   "lastName":"Last name",
   "lastNameRequired":"*Last name is required.",
+  "Localization":"Localization",
   "login":"LOG IN",
   "logout":"LOG OUT",
   "material":"Material",
@@ -83,6 +95,7 @@
   "new":"New",
   "no":"No",
   "number":"Number",
+  "otherInformation":"Other information",
   "otherPhone":"Other phone",
   "owner":"Owner",
   "pager":"Pager",
@@ -99,18 +112,29 @@
   "pnapNightResident":"Night resident",
   "pnapNumber":"Number",
   "pnapNumberValidationMessage":"*The number must be a valid integer.",
+  "position":"Position",
   "priority":"Priority",
   "priorityValidationMessage":"*You must enter a valid number.",
+  "product":"Product",
+  "productRequired":"*Product is required.",
+  "quantity":"Quantity",
+  "quantityValidationMessage":"*The quantity must be a valid integer.",
   "reason":"Reason",
   "risk":"Risk",
   "riskLevel": "Risk level",
   "roof":"Roof",
   "room":"Room",
+  "securityPerimeter":"Security perimeter",
   "siding":"Siding",
   "start": "Start",
   "street":"Street",
+  "supply":"Supply",
   "survey":"Survey",
   "surveyRequired":"Please answer the survey to complete inpsection.",
+  "tank":"Tank",
+  "tankTypeUndetermined":"Undetermined",
+  "tankTypeUnderground":"Underground",
+  "tankTypeAboveGround":"Aboveground",
   "transversal":"Transversal",
   "type":"Type",
   "typeRequired":"*Type is required.",
@@ -121,6 +145,7 @@
   "visitStatusStarted":"Visit in progress",
   "visitStatusTodo":"Pending visit",
   "waitFormMessage":"Wait...",
+  "wall":"Wall",
   "warning":"Warning",
   "waterSupplies":"Water supplies",
   "yes":"Yes",
