--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -16,6 +16,7 @@
   "buildingPNAPS":"PNAPS du batîment",
   "buildings":"Batîments",
   "cancel":"Annuler",
+  "capacity":"Capacité",
   "cellular":"Cellulaire",
   "choose":"Choisir",
   "chooseFireStation":"Choose a fire station",
@@ -28,6 +29,10 @@
   "contactDeleteButton": "Supprimer le contact",
   "contactDeleteQuestion":"Êtes-vous sûre de vouloir supprimer ce contact ?",
   "contactLeaveMessage":"Le contact contient des erreurs de validation et n'a pas été sauvegardé.  Voulez-vous quand même retourner à la page des contacts du bâtiment?",
+  "container":"Contenant",
+  "containerCapacity":"Capacité du contenant",
+  "containerCapacityValidationMessage":"*La capacité doit être une valeur décimale de format valide.",
+  "containerUnitRequired":"*L'unité de mesure est requise si la capacité est supérieure à 0.",
   "course":"Parcours",
   "courseDetail":"Détail du parcours",
   "courseDetailDeleteButton":"Supprimer le parcours",
@@ -40,6 +45,7 @@
   "detached":"Détaché",
   "dieValidationMessage":"*Le DIE doit être une valeur entière et valide supérieure ou égale à 0.",
   "direction":"Direction",
+  "division":"Section",
   "extension":"Extension",
   "finish":"Terminer",
   "fireHydrantDelete":"Suppression de borne",
@@ -53,7 +59,12 @@
   "firstNameRequired":"*Le prénom est requis.",
   "floor":"Étage",
   "garage":"Garage",
+  "gasInlet":"Entrée de gaz",
   "generalInformation":"Infos générales",
+  "hazardousMaterialDelete":"Supprimer cette matière...",
+  "hazardousMaterialDeleteQuestion":"Êtes-vous certain de vouloir supprimer cette matière dangereuse ?",
+  "hazardousMaterialDetail":"Détails de la matière dangereuse",
+  "hazardousMaterialLeaveMessage":"La matière contient des erreurs de validation et n'a pas été sauvegardée.  Voulez-vous quand même retourner à la page des matières dangereuses du bâtiment ?",
   "height":"Hauteur",
   "heightValidationMessage":"*La hauteur doit être une valeur décimale de format valide (ex.: 9999.99).",
   "homePhone":"Téléphone domicile",
@@ -75,6 +86,7 @@
   "laneRequired":"*La voie est requise.",
   "lastName":"Nom",
   "lastNameRequired":"Le nom est requis.",
+  "Localization":"Localisation",
   "login":"CONNEXION",
   "logout":"Quitter",
   "material":"Matériel",
@@ -83,6 +95,7 @@
   "new":"Nouvelle",
   "no":"Non",
   "number":"Numéro",
+  "otherInformation":"Autres informations",
   "otherPhone":"Autre téléphone",
   "owner":"Propriétaire",
   "pager":"Téléavertisseur",
@@ -99,18 +112,29 @@
   "pnapNightResident":"Résident de nuit",
   "pnapNumber":"Nombre",
   "pnapNumberValidationMessage":"*Le nombre doit être une valeur entière valide.",
+  "position":"Endroit",
   "priority":"Priorité",
   "priorityValidationMessage":"*Vous devez entrer un nombre valide.",
+  "product":"Produit",
+  "productRequired":"*Le produit est requis.",
+  "quantity":"Quantité",
+  "quantityValidationMessage":"*La quantité doit être une valeur entière valide.",
   "reason":"Raison",
   "risk":"Risque",
   "riskLevel": "Niveau de risque",
   "roof":"Toit",
   "room":"Local",
+  "securityPerimeter":"Périmètre de sécurité",
   "siding":"Revêtement",
   "start": "Démarrer",
   "street":"Rue",
+  "supply":"Alimentation",
   "survey":"Questionnaire",
   "surveyRequired":"Please answer the survey to complete inpsection.",
+  "tank":"Réservoir",
+  "tankTypeUndetermined":"Indéterminé",
+  "tankTypeUnderground":"Sous-terre",
+  "tankTypeAboveGround":"Hors-terre",
   "transversal":"Transversale",
   "type":"Type",
   "typeRequired":"*Le type est requis.",
@@ -121,6 +145,7 @@
   "visitStatusStarted":"Visite en cours",
   "visitStatusCompleted":"Visit completée",
   "waitFormMessage":"Patientez...",
+  "wall":"Mur",
   "warning":"Avertissement",
   "waterSupplies":"Alimentation en eau",
   "yes":"Oui",
