feat(#101) Add translation in building fire safety

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2,6 +2,8 @@
   "absence":"Absence",
   "add":"Add",
   "addContactButton":"Add a contact...",
+  "addFirePanelAlarmButton":"Add a alarm panel...",
+  "addFireSprinklerButton":"Add a fire sprinkler...",
   "addHazardousMaterialButton":"Add hazardous material...",
   "addLaneButton":"Add a lane...",
   "addPnapButton":"Add a PNAP...",
@@ -48,11 +50,14 @@
   "division":"Division",
   "extension":"Extension",
   "finish":"Finish",
+  "fireAlarmPanel":"Alarm panel",
   "fireHydrantDelete":"Delete fire hydrant",
   "fireHydrantDeleteQuestion":"Do you really want to delete this fire hydrant ?",
   "fireHydrantList":"Fire hydrant list",
   "fireHydrants":"Fire hydrants",
   "fireResistance":"Fire resistance",
+  "fireSafety":"Fire safety",
+  "fireSprinkler":"Fire sprinklers",
   "fireStation":"Fire station",
   "fireStationRequired":"Fire station is mandatory",
   "firstName":"First name",
