--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -2,6 +2,8 @@
   "absence":"Absence",
   "add":"Ajouter",
   "addContactButton":"Ajouter un contact...",
+  "addFirePanelAlarmButton":"Ajouter un panneau d'alarme...",
+  "addFireSprinklerButton":"Ajouter un gicleur...",
   "addHazardousMaterialButton":"Ajouter une matière dangereuse...",
   "addLaneButton":"Ajouter une voie...",
   "addPnapButton":"Ajouter un PNAP...",
@@ -48,11 +50,14 @@
   "division":"Section",
   "extension":"Extension",
   "finish":"Terminer",
+  "fireAlarmPanel":"Panneaux d'alarme",
   "fireHydrantDelete":"Suppression de borne",
   "fireHydrantDeleteQuestion":"Êtes-vous sûre de vouloir supprimer cette borne ? ?",
   "fireHydrantList":"Liste des bornes incendie",
   "fireHydrants":"Bornes incendie",
   "fireResistance":"Résistance au feu",
+  "fireSafety":"Protection incendie",
+  "fireSprinkler":"Gicleurs incendie",
   "fireStation":"Caserne",
   "fireStationRequired":"La caserne est obligatoire",
   "firstName":"Prénom",
