feat(#101) Add translation to survey, fire safety, particular risks

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -8,7 +8,9 @@
   "addLaneButton":"Add a lane...",
   "addPnapButton":"Add a PNAP...",
   "affectation":"Assignment",
+  "Abnromalities":"Abnromalities",
   "approximate":"Approximate",
+  "backToBuildingList":"Return to building list",
   "building":"Building",
   "buildingContact": "Building contacts",
   "buildingDetail":"Building details",
@@ -20,13 +22,17 @@
   "cancel":"Cancel",
   "capacity":"Capacity",
   "cellular":"Cellular",
-  "choose":"Choose",
+  "choose":"Choose...",
   "chooseFireStation":"Choose a fire station",
   "code":"Code",
+  "collectorLocation":"Collector location",
+  "comment":"Comment",
+  "commentHolder":"Add your comment here",
   "complete":"Complete",
   "confirmation":"Confirmation",
   "construction":"Construction",
   "contact":"Contact",
+  "contacts":"Contacts",
   "contactDeleteButton": "Delete this contact",
   "contactDeleteQuestion":"Do you really want to delete this contact ?",
   "contactDetail":"Contact details",
@@ -51,6 +57,10 @@
   "extension":"Extension",
   "finish":"Finish",
   "fireAlarmPanel":"Alarm panel",
+  "fireAlarmPanelDelete":"Delete this alarm panel",
+  "fireAlarmPanelDeleteQuestion":"Do you really want to delete this alarm panel ?",
+  "fireAlarmPanelDetail":"Alarm panel details",
+  "fireAlarmPanelLeaveMessage":"The alarm panel contains some validation errors and have not been saved. Do you still want to go to the building fire safety list ?",
   "fireHydrantDelete":"Delete fire hydrant",
   "fireHydrantDeleteQuestion":"Do you really want to delete this fire hydrant ?",
   "fireHydrantList":"Fire hydrant list",
@@ -58,14 +68,20 @@
   "fireResistance":"Fire resistance",
   "fireSafety":"Fire safety",
   "fireSprinkler":"Fire sprinklers",
+  "fireSprinklerDelete":"Delete fire sprinkler",
+  "fireSprinklerDeleteQuestion":"Do you really want to delete this sprinkler ?",
+  "fireSrinklerDetail":"Fire sprinkler details",
+  "fireSprinklerLeaveMessage":"The sprinkler contains some validation errors and have not been saved. Do you still want to go to the building fire safety list ?",
   "fireStation":"Fire station",
   "fireStationRequired":"Fire station is mandatory",
   "firstName":"First name",
   "firstNameRequired":"*First name is required.",
   "floor":"Floor",
+  "foundation":"Foundation",
   "garage":"Garage",
   "gasInlet":"Gaz inlet",
   "generalInformation":"General information",
+  "hazardousMaterial":"Hazardous materials",
   "hazardousMaterialDelete":"Delete this hazardous material...",
   "hazardousMaterialDeleteQuestion":"Do you really want to delete this material ?",
   "hazardousMaterialDetail":"Hazardous material details",
@@ -96,16 +112,23 @@
   "logout":"LOG OUT",
   "material":"Material",
   "matricule":"Matricule",
+  "measurement":"Dimension",
   "measuringUnitRequired":"*The measuring unit is required.",
-  "new":"New",
+  "new":"New...",
   "no":"No",
   "number":"Number",
+  "opening":"Opening",
   "otherInformation":"Other information",
   "otherPhone":"Other phone",
   "owner":"Owner",
   "pager":"Pager",
+  "particularRisk":"Particular risks",
+  "particularRiskFloor":"Floor",
   "password":"Password",
   "phone":"Phone",
+  "photoDeleteQuestion":"Do you really want to delete this photo ?",
+  "pipingLocation":"Piping localization",
+  "pnaps":"PNAPS",
   "pnapDayResident":"Day resident",
   "pnapDeleteButton":"Delete this PNAP",
   "pnapDeleteQuestion":"Do you really want to delete this PNAP ?",
@@ -129,12 +152,17 @@
   "riskLevel": "Risk level",
   "roof":"Roof",
   "room":"Room",
+  "search":"Search",
+  "searchHolder":"Search...",
   "securityPerimeter":"Security perimeter",
   "siding":"Siding",
   "start": "Start",
   "street":"Street",
   "supply":"Supply",
   "survey":"Survey",
+  "surveyCompletedMessage":"The survey is completed, redirect to the survey summary.",
+  "surveyNextQuestion":"Previous",
+  "surveyPreviousQuestion":"Previous",
   "surveyRequired":"Please answer the survey to complete inpsection.",
   "tank":"Tank",
   "tankTypeUndetermined":"Undetermined",
@@ -153,6 +181,7 @@
   "wall":"Wall",
   "warning":"Warning",
   "waterSupplies":"Water supplies",
+  "weakened":"Weakened",
   "yes":"Yes",
 
   "compilerOptions": {
