--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -8,7 +8,9 @@
   "addLaneButton":"Ajouter une voie...",
   "addPnapButton":"Ajouter un PNAP...",
   "affectation":"Affectation",
+  "Abnromalities":"Anomalies",
   "approximate":"Approximatif",
+  "backToBuildingList":"Retourner à la liste des batîments",
   "building":"Batîment",
   "buildingContact": "Contacts du batîment",
   "buildingDetail":"Détails du batîmnet",
@@ -20,13 +22,17 @@
   "cancel":"Annuler",
   "capacity":"Capacité",
   "cellular":"Cellulaire",
-  "choose":"Choisir",
+  "choose":"Choisir...",
   "chooseFireStation":"Choose a fire station",
   "code":"Code",
+  "collectorLocation":"Emplacement collecteur",
+  "comment":"Commentaires",
+  "commentHolder":"Entrez votre commentaire ici ",
   "complete":"Compléter",
   "Confirmation":"Confirmation",
   "construction":"Construction",
   "contact":"Contact",
+  "contacts":"Contacts",
   "contactDetail":"Détails du contact",
   "contactDeleteButton": "Supprimer le contact",
   "contactDeleteQuestion":"Êtes-vous sûre de vouloir supprimer ce contact ?",
@@ -51,6 +57,10 @@
   "extension":"Extension",
   "finish":"Terminer",
   "fireAlarmPanel":"Panneaux d'alarme",
+  "fireAlarmPanelDelete":"Supprimer ce panneau d'alarme",
+  "fireAlarmPanelDeleteQuestion":"Êtes-vous sûre de vouloir supprimer ce panneau d'alarme ?",
+  "fireAlarmPanelDetail":"Détails du panneau d'alarme",
+  "fireAlarmPanelLeaveMessage":"Le panneaux d'alarme contient des erreurs de validation et n'a pas été sauvegardé.  Voulez-vous quand même retourner à la page des protections incendie du bâtiment?",
   "fireHydrantDelete":"Suppression de borne",
   "fireHydrantDeleteQuestion":"Êtes-vous sûre de vouloir supprimer cette borne ? ?",
   "fireHydrantList":"Liste des bornes incendie",
@@ -58,16 +68,22 @@
   "fireResistance":"Résistance au feu",
   "fireSafety":"Protection incendie",
   "fireSprinkler":"Gicleurs incendie",
+  "fireSprinklerDelete":"Supprimer le gicleur",
+  "fireSprinklerDeleteQuestion":"Êtes-vous sûre de vouloir supprimer ce gicleur?",
+  "fireSrinklerDetail":"Détails du gicleur incendie",
+  "fireSprinklerLeaveMessage":"Le gicleur contient des erreurs de validation et n'a pas été sauvegardé.  Voulez-vous quand même retourner à la page des protections incendie du bâtiment?",
   "fireStation":"Caserne",
   "fireStationRequired":"La caserne est obligatoire",
   "firstName":"Prénom",
   "firstNameRequired":"*Le prénom est requis.",
   "floor":"Étage",
+  "foundation":"Fondation",
   "garage":"Garage",
   "gasInlet":"Entrée de gaz",
   "generalInformation":"Infos générales",
+  "hazardousMaterial":"Hazardous materials",
   "hazardousMaterialDelete":"Supprimer cette matière...",
-  "hazardousMaterialDeleteQuestion":"Êtes-vous certain de vouloir supprimer cette matière dangereuse ?",
+  "hazardousMaterialDeleteQuestion":"Êtes-vous sûre de vouloir supprimer cette matière dangereuse ?",
   "hazardousMaterialDetail":"Détails de la matière dangereuse",
   "hazardousMaterialLeaveMessage":"La matière contient des erreurs de validation et n'a pas été sauvegardée.  Voulez-vous quand même retourner à la page des matières dangereuses du bâtiment ?",
   "height":"Hauteur",
@@ -96,19 +112,26 @@
   "logout":"Quitter",
   "material":"Matériel",
   "matricule":"Matricule",
+  "measurement":"Measurement",
   "measuringUnitRequired":"*L'unité de mesure est requise.",
-  "new":"Nouvelle",
+  "new":"Nouvelle...",
   "no":"Non",
   "number":"Numéro",
+  "opning":"Ouveture",
   "otherInformation":"Autres informations",
   "otherPhone":"Autre téléphone",
   "owner":"Propriétaire",
   "pager":"Téléavertisseur",
+  "particularRisk":"Risques particuliers",
+  "particularRiskFloor":"Plancher",
   "password":"Mot de passe",
   "phone":"Téléphone",
+  "photoDeleteQuestion":"Êtes-vous sûre de vouloir supprimer cette photo ?",
+  "pipingLocation":"Emplacement canalisation",
+  "pnaps":"PNAPS",
   "pnapDayResident":"Résident de jour",
   "pnapDeleteButton":"Supprimer le PNAP",
-  "pnapDeleteQuestion":"Êtes-vous certain de vouloir supprimer ce PNAP ?",
+  "pnapDeleteQuestion":"Êtes-vous sûre de vouloir supprimer ce PNAP ?",
   "pnapDetail":"Détails du PNAP",
   "pnapDetailContactNameHolder":"Nom du contact",
   "pnapDetailNameHolder":"Nom de la personne",
@@ -129,12 +152,16 @@
   "riskLevel": "Niveau de risque",
   "roof":"Toit",
   "room":"Local",
+  "search":"Recherche",
+  "searchHolder":"Recherche...",
   "securityPerimeter":"Périmètre de sécurité",
   "siding":"Revêtement",
   "start": "Démarrer",
   "street":"Rue",
   "supply":"Alimentation",
   "survey":"Questionnaire",
+  "surveyCompletedMessage":"Le questionnaire est complété, redirection vers le résumé du questionnaire.",
+  "surveyPreviousQuestion":"Précédente",
   "surveyRequired":"Please answer the survey to complete inpsection.",
   "tank":"Réservoir",
   "tankTypeUndetermined":"Indéterminé",
@@ -153,6 +180,7 @@
   "wall":"Mur",
   "warning":"Avertissement",
   "waterSupplies":"Alimentation en eau",
+  "weakened":"Affaibli",
   "yes":"Oui",
 
   "compilerOptions": {
